[gd_scene load_steps=4 format=3 uid="uid://dkqqqmbnxkcny"]

[ext_resource type="PackedScene" uid="uid://h3pjqsmvpqim" path="res://game/block.tscn" id="1_njqff"]
[ext_resource type="Script" path="res://game/editor/editor_block.gd" id="2_rj4sg"]
[ext_resource type="Texture2D" uid="uid://f0mfv11wcfcf" path="res://assets/textures/white.png" id="3_8r4a6"]

[node name="EditorBlock" node_paths=PackedStringArray("highlight") instance=ExtResource("1_njqff")]
script = ExtResource("2_rj4sg")
highlight = NodePath("Highlight")

[node name="Highlight" type="Sprite2D" parent="." index="1"]
visible = false
modulate = Color(1, 1, 1, 0.521569)
texture = ExtResource("3_8r4a6")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
